made a couple of changes to fix the container overflowing onto the footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,12 +64,6 @@ p, a, button {
 
 /* ------------------------ Overflow Sections ------------------------ */
 
-.overflow-auto{
-    overflow-y: scroll;
-    min-height: 0px;
-    height: 60vh;  
-}
-
 /* ------------------------ Front Page Section ------------------------*/
 
 .fp-title-text{
